@@ -1,7 +1,7 @@
 #
 # spec file for package qmidictl
 #
-# Copyright (C) 2010-2019, rncbc aka Rui Nuno Capela. All rights reserved.
+# Copyright (C) 2010-2020, rncbc aka Rui Nuno Capela. All rights reserved.
 #
 # All modifications and additions to the file contributed by third parties
 # remain the property of their copyright owners, unless otherwise agreed
@@ -79,6 +79,8 @@ for Windows (http://nerds.de).
 %dir %{_datadir}/icons/hicolor/48x48/hildon
 %dir %{_datadir}/icons/hicolor/64x64
 %dir %{_datadir}/icons/hicolor/64x64/hildon
+%dir %{_datadir}/icons/hicolor/scalable
+%dir %{_datadir}/icons/hicolor/scalable/apps
 %dir %{_datadir}/metainfo
 #dir %{_datadir}/man
 #dir %{_datadir}/man/man1
@@ -88,6 +90,7 @@ for Windows (http://nerds.de).
 %{_datadir}/icons/hicolor/32x32/hildon/%{name}.png
 %{_datadir}/icons/hicolor/48x48/hildon/%{name}.png
 %{_datadir}/icons/hicolor/64x64/hildon/%{name}.png
+%{_datadir}/icons/hicolor/scalable/apps/%{name}.svg
 %{_datadir}/metainfo/%{name}.appdata.xml
 %{_datadir}/man/man1/%{name}*.1.gz
 
